0.8.3
** Fixed problem packing two or more times the same file.

0.8.2 public release (rev117)
*** Improved Hexadecimal editor -> Now using Be.HexEditor (by Bernhard Elbl)
*** Read BMD0 files and show the textures (if any)
** Game GYAKUKEN (Gyajuten kenji 2) - Unpacker
** Game DBK ULTIMATE (Dragon Ball Kai Ultimate Butouden) - Unpacker for "archiveDBK.dsa" 
** Game MAPLESTORYDS (Maple Story DS) - Unpacker for "RESOURCE.NXARC"
** Game NINOKUNI (Ninokuni Shikkoku no Madoushi) supported
  - Unpacker for NPCK and KPCN files
  - Packer for NPCK and KPCN files
  - Text translator for SQ files
  - Credits images supported
** Game SUBARASHIKI (The world end with you) - Unpacker
** Game TOKIMEKIGS3S supported (LZS and RESC)
** Game BLOODBAHAMUT supported (.DPK by Tricky Upgrade)
** Game RUNFACTORY3 supported (unpacker and packer)
** Game SF FEATHER supported (unpacker for pac, support for CGx, SCx)
** Improved Font plugin
  - Fixed problem with rotated Font
  - Fixed problem with char codes
  - Change info map char (PMAC section)
  - Fixed problems saving new fonts
  - Add new chars
** Fixed problem reading NCER files
** Added new method to set the transparency color.
** Added method to create NSCR files of NCGR subimages
** Add button Pack (instead of using controls from button "View")
** Improved perfomance reading ROMs
** Supported SRL files (wifi download files)
* Fixed problem with textures with format 2
* Fixed problems in SDAT plugin
* Added support for PMCP section in NCLR
* Improved zoom function
* Improved support for Mono 2.10
* Fixed minor bugs

0.8.1 (public release) rev100
*** BTX0 textures supported (view only)
** Game 999HRPERDOOR (Nine Hours, Nine Persons, Nine Doors) supported
   - SIR0 files in folder /cha
** Game EDGEWORTH (Ace Attorney Investigation Miles Edgeworth) supported
   - Unpack and pack support to the file romfile.bin
** Improved Image plugin: import and export palette in Window Palette format